Add ChatBox and ProductDetails components
Introduce a ChatBox component with interactive messaging and dynamic UI handling. Include ProductDetails component for improved product display and user customization.

--- a/src/index.html
+++ b/src/index.html
@@ -12,4 +12,10 @@
 <body>
   <app-root></app-root>
 </body>
+<!-- main.js -->
+<script type="module">
+  // 1. Import the script to register the component
+  import '@mcp-ui/client/ui-resource-renderer.wc.js';
+
+</script>
 </html>
